--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -14,7 +14,7 @@ input {
   numlock_by_default = true
 
   # Increase sensitivity for mouse/trackpad (default: 0)
-  # sensitivity = -1
+  sensitivity = -1
 
   touchpad {
     # Use natural (inverse) scrolling
