feat: add custom Hyprland overrides and update PATH in .zshrc

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -27,3 +27,5 @@ source = ~/.config/hypr/autostart.conf
 env = NVD_BACKEND,direct
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+source = /home/richecr/my-configs/omarchy/hyprland-overrides.conf
